[package]
name = "steamworksjs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.8", features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = "2.16.9"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "time"] }
steamworks = { git = "https://github.com/Noxime/steamworks-rs/", rev = "58feb1b85f0cf1ea64ea621f3336d892131c1a6a", features = ["serde"] }
serde = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
